# fraud-detection-ml-system

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
artifacts/reports/: baseline_report.json  production_report.json
configs/: data.yaml  model.yaml  service.yaml  train.yaml
data/validation_reports/: validation_report.json
notebooks/: README.md
scripts/: download_data.py  evaluate.py  serve.py  train.py  validate_data.py
src/: __init__.py
src/api/: main.py  predictor.py  schemas.py
src/evaluation/: metrics.py
src/features/: pipeline.py
src/ingestion/: __init__.py  loader.py
src/registry/: __init__.py  mlflow_registry.py
src/training/: baseline.py  train.py
src/utils/: config.py  logger.py
src/validation/: __init__.py  schema.py
tests/: conftest.py
tests/api/: test_endpoints.py
tests/integration/: test_pipeline.py
tests/unit/: test_features.py  test_metrics.py  test_schema.py
